--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Camille Lupo</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style>
+    @media (min-width: 1200px) {
+        body {
+            height: 100%;
+            overflow-y: hidden;
+            font-family: 'Roboto Mono', Monaco, courier, monospace;
+        }
+    }
+    @media (max-width: 1200px) {
+        body {
+            height: 100%;
+            overflow-y: visible;
+            font-family: 'Roboto Mono', Monaco, courier, monospace;
+        }
+    }
+
+</style>
