--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="icon" href="/favicon.ico">
     <title>Camille Lupo</title>
   </head>
   <body>
@@ -17,6 +18,7 @@
             height: 100%;
             overflow-y: hidden;
             font-family: 'Roboto Mono', Monaco, courier, monospace;
+            background-color: #111111;
         }
     }
     @media (max-width: 1200px) {
@@ -24,6 +26,7 @@
             height: 100%;
             overflow-y: visible;
             font-family: 'Roboto Mono', Monaco, courier, monospace;
+            background-color: #111111;
         }
     }
 
